ACLOCAL_AMFLAGS=-I m4

PHREEQCRM_EXTRA_DIST=\
	CMakeLists.txt\
	phreeqcrm.cmake.in\
	PhreeqcRMConfig.cmake.in\
	swig/CMakeLists.txt\
	swig/numpy.i\
	swig/PhreeqcRM.i\
	swig/pyfragments.swg.in\
	swig/python/AdvectBMI_py.py\
	swig/python/BMIPhreeqcRM_docstrings.swg\
	swig/python/CMakeLists.txt\
	swig/python/PhreeqcRM_docstrings.swg\
	swig/python/SimpleAdvect.py\
	swig/python/test_basic.py\
	swig/python/test_get_value.py\
	swig/python/test_irf.py\
	swig/python/test_set_value.py\
	swig/python/TestAllMethods_py.py\
	swig/python/WriteYAMLFile_py.py\
	swig/python/yamlphreeqcrm.py\
	swig/python/YAMLPhreeqcRM.swg

EXTRA_DIST=$(PHREEQCRM_EXTRA_DIST)

YAML_CPP_EXTRA_DIST=\
	extern/yaml-cpp\
	extern/yaml-cpp/.clang-format\
	extern/yaml-cpp/.codedocs\
	extern/yaml-cpp/.github\
	extern/yaml-cpp/.github/workflows\
	extern/yaml-cpp/.github/workflows/build.yml\
	extern/yaml-cpp/.gitignore\
	extern/yaml-cpp/BUILD.bazel\
	extern/yaml-cpp/CMakeLists.txt\
	extern/yaml-cpp/cmake_uninstall.cmake.in\
	extern/yaml-cpp/CONTRIBUTING.md\
	extern/yaml-cpp/docs\
	extern/yaml-cpp/docs/Breaking-Changes.md\
	extern/yaml-cpp/docs/How-To-Emit-YAML.md\
	extern/yaml-cpp/docs/How-To-Parse-A-Document-(Old-API).md\
	extern/yaml-cpp/docs/index.md\
	extern/yaml-cpp/docs/Strings.md\
	extern/yaml-cpp/docs/Tutorial.md\
	extern/yaml-cpp/docs/_config.yml\
	extern/yaml-cpp/include\
	extern/yaml-cpp/include/yaml-cpp\
	extern/yaml-cpp/include/yaml-cpp/anchor.h\
	extern/yaml-cpp/include/yaml-cpp/binary.h\
	extern/yaml-cpp/include/yaml-cpp/contrib\
	extern/yaml-cpp/include/yaml-cpp/contrib/anchordict.h\
	extern/yaml-cpp/include/yaml-cpp/contrib/graphbuilder.h\
	extern/yaml-cpp/include/yaml-cpp/depthguard.h\
	extern/yaml-cpp/include/yaml-cpp/dll.h\
	extern/yaml-cpp/include/yaml-cpp/emitfromevents.h\
	extern/yaml-cpp/include/yaml-cpp/emitter.h\
	extern/yaml-cpp/include/yaml-cpp/emitterdef.h\
	extern/yaml-cpp/include/yaml-cpp/emittermanip.h\
	extern/yaml-cpp/include/yaml-cpp/emitterstyle.h\
	extern/yaml-cpp/include/yaml-cpp/eventhandler.h\
	extern/yaml-cpp/include/yaml-cpp/exceptions.h\
	extern/yaml-cpp/include/yaml-cpp/mark.h\
	extern/yaml-cpp/include/yaml-cpp/node\
	extern/yaml-cpp/include/yaml-cpp/node/convert.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail\
	extern/yaml-cpp/include/yaml-cpp/node/detail/impl.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/iterator.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/iterator_fwd.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/memory.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/node.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/node_data.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/node_iterator.h\
	extern/yaml-cpp/include/yaml-cpp/node/detail/node_ref.h\
	extern/yaml-cpp/include/yaml-cpp/node/emit.h\
	extern/yaml-cpp/include/yaml-cpp/node/impl.h\
	extern/yaml-cpp/include/yaml-cpp/node/iterator.h\
	extern/yaml-cpp/include/yaml-cpp/node/node.h\
	extern/yaml-cpp/include/yaml-cpp/node/parse.h\
	extern/yaml-cpp/include/yaml-cpp/node/ptr.h\
	extern/yaml-cpp/include/yaml-cpp/node/type.h\
	extern/yaml-cpp/include/yaml-cpp/noexcept.h\
	extern/yaml-cpp/include/yaml-cpp/null.h\
	extern/yaml-cpp/include/yaml-cpp/ostream_wrapper.h\
	extern/yaml-cpp/include/yaml-cpp/parser.h\
	extern/yaml-cpp/include/yaml-cpp/stlemitter.h\
	extern/yaml-cpp/include/yaml-cpp/traits.h\
	extern/yaml-cpp/include/yaml-cpp/yaml.h\
	extern/yaml-cpp/install.txt\
	extern/yaml-cpp/LICENSE\
	extern/yaml-cpp/README.md\
	extern/yaml-cpp/src\
	extern/yaml-cpp/src/binary.cpp\
	extern/yaml-cpp/src/collectionstack.h\
	extern/yaml-cpp/src/contrib\
	extern/yaml-cpp/src/contrib/graphbuilder.cpp\
	extern/yaml-cpp/src/contrib/graphbuilderadapter.cpp\
	extern/yaml-cpp/src/contrib/graphbuilderadapter.h\
	extern/yaml-cpp/src/contrib/yaml-cpp.natvis\
	extern/yaml-cpp/src/contrib/yaml-cpp.natvis.md\
	extern/yaml-cpp/src/convert.cpp\
	extern/yaml-cpp/src/depthguard.cpp\
	extern/yaml-cpp/src/directives.cpp\
	extern/yaml-cpp/src/directives.h\
	extern/yaml-cpp/src/emit.cpp\
	extern/yaml-cpp/src/emitfromevents.cpp\
	extern/yaml-cpp/src/emitter.cpp\
	extern/yaml-cpp/src/emitterstate.cpp\
	extern/yaml-cpp/src/emitterstate.h\
	extern/yaml-cpp/src/emitterutils.cpp\
	extern/yaml-cpp/src/emitterutils.h\
	extern/yaml-cpp/src/exceptions.cpp\
	extern/yaml-cpp/src/exp.cpp\
	extern/yaml-cpp/src/exp.h\
	extern/yaml-cpp/src/indentation.h\
	extern/yaml-cpp/src/memory.cpp\
	extern/yaml-cpp/src/node.cpp\
	extern/yaml-cpp/src/nodebuilder.cpp\
	extern/yaml-cpp/src/nodebuilder.h\
	extern/yaml-cpp/src/nodeevents.cpp\
	extern/yaml-cpp/src/nodeevents.h\
	extern/yaml-cpp/src/node_data.cpp\
	extern/yaml-cpp/src/null.cpp\
	extern/yaml-cpp/src/ostream_wrapper.cpp\
	extern/yaml-cpp/src/parse.cpp\
	extern/yaml-cpp/src/parser.cpp\
	extern/yaml-cpp/src/ptr_vector.h\
	extern/yaml-cpp/src/regeximpl.h\
	extern/yaml-cpp/src/regex_yaml.cpp\
	extern/yaml-cpp/src/regex_yaml.h\
	extern/yaml-cpp/src/scanner.cpp\
	extern/yaml-cpp/src/scanner.h\
	extern/yaml-cpp/src/scanscalar.cpp\
	extern/yaml-cpp/src/scanscalar.h\
	extern/yaml-cpp/src/scantag.cpp\
	extern/yaml-cpp/src/scantag.h\
	extern/yaml-cpp/src/scantoken.cpp\
	extern/yaml-cpp/src/setting.h\
	extern/yaml-cpp/src/simplekey.cpp\
	extern/yaml-cpp/src/singledocparser.cpp\
	extern/yaml-cpp/src/singledocparser.h\
	extern/yaml-cpp/src/stream.cpp\
	extern/yaml-cpp/src/stream.h\
	extern/yaml-cpp/src/streamcharsource.h\
	extern/yaml-cpp/src/stringsource.h\
	extern/yaml-cpp/src/tag.cpp\
	extern/yaml-cpp/src/tag.h\
	extern/yaml-cpp/src/token.h\
	extern/yaml-cpp/test\
	extern/yaml-cpp/test/binary_test.cpp\
	extern/yaml-cpp/test/BUILD.bazel\
	extern/yaml-cpp/test/CMakeLists.txt\
	extern/yaml-cpp/test/create-emitter-tests.py\
	extern/yaml-cpp/test/gtest-1.11.0\
	extern/yaml-cpp/test/gtest-1.11.0/.clang-format\
	extern/yaml-cpp/test/gtest-1.11.0/.github\
	extern/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE\
	extern/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/00-bug_report.md\
	extern/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/10-feature_request.md\
	extern/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/config.yml\
	extern/yaml-cpp/test/gtest-1.11.0/.gitignore\
	extern/yaml-cpp/test/gtest-1.11.0/BUILD.bazel\
	extern/yaml-cpp/test/gtest-1.11.0/ci\
	extern/yaml-cpp/test/gtest-1.11.0/ci/linux-presubmit.sh\
	extern/yaml-cpp/test/gtest-1.11.0/ci/macos-presubmit.sh\
	extern/yaml-cpp/test/gtest-1.11.0/CMakeLists.txt\
	extern/yaml-cpp/test/gtest-1.11.0/CONTRIBUTING.md\
	extern/yaml-cpp/test/gtest-1.11.0/CONTRIBUTORS\
	extern/yaml-cpp/test/gtest-1.11.0/docs\
	extern/yaml-cpp/test/gtest-1.11.0/docs/advanced.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/assets\
	extern/yaml-cpp/test/gtest-1.11.0/docs/assets/css\
	extern/yaml-cpp/test/gtest-1.11.0/docs/assets/css/style.scss\
	extern/yaml-cpp/test/gtest-1.11.0/docs/community_created_documentation.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/faq.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/gmock_cheat_sheet.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/gmock_cook_book.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/gmock_faq.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/gmock_for_dummies.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/index.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/pkgconfig.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/platforms.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/primer.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/quickstart-bazel.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/quickstart-cmake.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference/actions.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference/assertions.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference/matchers.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference/mocking.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/reference/testing.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/samples.md\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_config.yml\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_data\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_data/navigation.yml\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_layouts\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_layouts/default.html\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_sass\
	extern/yaml-cpp/test/gtest-1.11.0/docs/_sass/main.scss\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/cmake\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/cmake/gmock.pc.in\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/cmake/gmock_main.pc.in\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/CMakeLists.txt\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/docs\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/docs/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-actions.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-cardinalities.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-function-mocker.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-matchers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-actions.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-matchers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-nice-strict.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-spec-builders.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-generated-actions.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-matchers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-port.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-internal-utils.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-port.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-pp.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/fuse_gmock_files.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/ast.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/gmock_class.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/gmock_class_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/keywords.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/tokenize.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/utils.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/__init__.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/gmock_gen.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/LICENSE\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/README\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/README.cppclean\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-all.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-cardinalities.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-internal-utils.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-matchers.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-spec-builders.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock_main.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/BUILD.bazel\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-actions_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-cardinalities_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-function-mocker_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-internal-utils_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-matchers_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-more-actions_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-nice-strict_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-port_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp-string_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-spec-builders_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_all_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_ex_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_leak_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_leak_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link2_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test_golden.txt\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_stress_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_test_utils.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake/Config.cmake.in\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake/gtest.pc.in\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake/gtest_main.pc.in\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake/internal_utils.cmake\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/cmake/libgtest.la.in\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/CMakeLists.txt\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/docs\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/docs/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-death-test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-matchers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-message.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-param-test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-printers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-spi.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-test-part.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-typed-test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_pred_impl.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_prod.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-port.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-printers.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-death-test-internal.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-filepath.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-internal.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-param-util.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port-arch.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-string.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-type-util.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/prime_tables.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample10_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3-inl.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample5_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample6_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample7_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample8_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample9_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/common.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/fuse_gtest_files.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/gen_gtest_pred_impl.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/gtest-config.in\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/release_docs.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/run_with_path.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/upload.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/scripts/upload_gtest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-all.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-death-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-filepath.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-internal-inl.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-matchers.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-port.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-printers.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-test-part.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-typed-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest_main.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/BUILD.bazel\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-break-on-failure-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-break-on-failure-unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-catch-exceptions-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-catch-exceptions-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-color-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-color-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test_ex_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-env-var-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-env-var-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-failfast-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-failfast-unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filepath-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filter-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filter-unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-global-environment-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-global-environment-unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-json-outfiles-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-json-output-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-list-tests-unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-list-tests-unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-listener-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-message-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-options-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test-golden-lin.txt\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name1-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name1-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name2-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name2-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test2-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-port-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-printers-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-setuptestsuite-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-setuptestsuite-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-shuffle-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-shuffle-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-test-part-test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-throw-on-failure-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-throw-on-failure-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-uninitialized-test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-uninitialized-test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test2_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.h\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-unittest-api_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_all_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_assert_by_exception_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_environment_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_help_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_help_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_json_test_utils.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_list_output_unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_list_output_unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_main_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_no_test_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_pred_impl_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_premature_exit_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_prod_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_repeat_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_check_output_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_environment_check_output_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_in_environment_setup_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_sole_header_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_stress_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_testbridge_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_testbridge_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_test_macro_stack_footprint_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_test_utils.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_throw_on_failure_ex_test.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_unittest.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile1_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile2_test_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfiles_test.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_output_unittest.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_output_unittest_.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_test_utils.py\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/production.cc\
	extern/yaml-cpp/test/gtest-1.11.0/googletest/test/production.h\
	extern/yaml-cpp/test/gtest-1.11.0/library.json\
	extern/yaml-cpp/test/gtest-1.11.0/LICENSE\
	extern/yaml-cpp/test/gtest-1.11.0/README.md\
	extern/yaml-cpp/test/gtest-1.11.0/WORKSPACE\
	extern/yaml-cpp/test/handler_test.h\
	extern/yaml-cpp/test/integration\
	extern/yaml-cpp/test/integration/emitter_test.cpp\
	extern/yaml-cpp/test/integration/encoding_test.cpp\
	extern/yaml-cpp/test/integration/error_messages_test.cpp\
	extern/yaml-cpp/test/integration/gen_emitter_test.cpp\
	extern/yaml-cpp/test/integration/handler_spec_test.cpp\
	extern/yaml-cpp/test/integration/handler_test.cpp\
	extern/yaml-cpp/test/integration/load_node_test.cpp\
	extern/yaml-cpp/test/integration/node_spec_test.cpp\
	extern/yaml-cpp/test/main.cpp\
	extern/yaml-cpp/test/mock_event_handler.h\
	extern/yaml-cpp/test/node\
	extern/yaml-cpp/test/node/node_test.cpp\
	extern/yaml-cpp/test/ostream_wrapper_test.cpp\
	extern/yaml-cpp/test/parser_test.cpp\
	extern/yaml-cpp/test/regex_test.cpp\
	extern/yaml-cpp/test/specexamples.h\
	extern/yaml-cpp/util\
	extern/yaml-cpp/util/api.cpp\
	extern/yaml-cpp/util/CMakeLists.txt\
	extern/yaml-cpp/util/parse.cpp\
	extern/yaml-cpp/util/read.cpp\
	extern/yaml-cpp/util/sandbox.cpp\
	extern/yaml-cpp/WORKSPACE\
	extern/yaml-cpp/yaml-cpp-config.cmake.in\
	extern/yaml-cpp/yaml-cpp.pc.in

EXTRA_DIST+=$(YAML_CPP_EXTRA_DIST)

AM_CPPFLAGS=-I$(top_srcdir)/src/IPhreeqcPhast -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords

AM_LDFLAGS=-release 3.0.0
# AM_LDFLAGS= -no-undefined -release 3.0.0

pkgconfigdir = $(datadir)/pkgconfig
pkgconfig_DATA = phreeqcrm.pc

# libtool libraries to build
lib_LTLIBRARIES=libphreeqcrm.la

# library sources for libphreeqcrm.la
libphreeqcrm_la_SOURCES=\
	src/BMI_interface_F.cpp\
	src/BMI_interface_F.h\
	src/BMIVariant.cpp\
	src/BMIVariant.h\
	src/bmi.hxx\
	src/BMIPhreeqcRM.cpp\
	src/BMIPhreeqcRM.h\
	src/IPhreeqcPhast/IPhreeqc/CSelectedOutput.cpp\
	src/IPhreeqcPhast/IPhreeqc/CSelectedOutput.hxx\
	src/IPhreeqcPhast/IPhreeqc/CVar.hxx\
	src/IPhreeqcPhast/IPhreeqc/Debug.h\
	src/IPhreeqcPhast/IPhreeqc/ErrorReporter.hxx\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface_F.cpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface_F.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.cpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.hpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqcCallbacks.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqcLib.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/advection.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/basicsubs.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cl1.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_exports.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/phrqtype.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Utils.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Utils.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvdense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvdense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvode.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvode.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxKinetics.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxKinetics.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxMix.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxMix.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Dictionary.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Dictionary.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dumper.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dumper.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Exchange.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Exchange.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ExchComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ExchComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/gases.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasPhase.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasPhase.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/global_structures.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/input.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/integrate.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/inverse.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolution.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolution.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolutionComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolutionComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/isotopes.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/kinetics.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/KineticsComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/KineticsComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/mainsubs.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/model.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NA.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NumKeyword.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NumKeyword.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector_serial.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector_serial.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/parse.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PBasic.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PBasic.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/phqalloc.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/phqalloc.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Phreeqc.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Phreeqc.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_io_output.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/pitzer_structures.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/pitzer.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblage.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblage.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblageComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblageComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/prep.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Pressure.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Pressure.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Reaction.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Reaction.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/read.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ReadClass.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/readtr.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/runner.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/runner.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SelectedOutput.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SelectedOutput.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Serializer.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Serializer.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sit.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/smalldense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/smalldense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Solution.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Solution.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SolutionIsotope.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SolutionIsotope.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/spread.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SS.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SS.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SSassemblage.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SSassemblage.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SScomp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SScomp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/step.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBinList.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBinList.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/structures.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialsmath.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialsmath.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialstypes.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Surface.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Surface.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceCharge.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceCharge.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/tally.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Temperature.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Temperature.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/tidy.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/transport.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Use.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Use.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/UserPunch.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/UserPunch.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/utilities.cpp\
	src/IPhreeqcPhast/IPhreeqc/thread.h\
	src/IPhreeqcPhast/IPhreeqc/Var.c\
	src/IPhreeqcPhast/IPhreeqc/Var.h\
	src/IPhreeqcPhast/IPhreeqc/Version.h\
	src/IPhreeqcPhast/IPhreeqcPhast.cxx\
	src/IPhreeqcPhast/IPhreeqcPhast.h\
	src/IPhreeqcPhast/IPhreeqcPhastLib.cpp\
	src/IPhreeqcPhast/IPhreeqcPhastLib.h\
	src/PhreeqcRM.cpp\
	src/RM_interface_C.cpp\
	src/RM_interface_F.cpp\
	src/RM_interface_F.h\
	src/RMVARS.h\
	src/VarManager.cpp\
	src/VarManager.h\
	src/YAML_interface_F.cpp\
	src/YAML_interface_F.h\
	src/YAMLPhreeqcRM.cpp\
	src/YAMLPhreeqcRM.h

include_HEADERS=\
	$(top_builddir)/irm_dll_export.h\
	$(top_srcdir)/src/BMIVariant.h\
	$(top_srcdir)/src/bmi.hxx\
	$(top_srcdir)/src/BMIPhreeqcRM.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqc.hpp\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqcCallbacks.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_exports.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/phrqtype.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/Var.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqcPhast.h\
	$(top_srcdir)/src/IrmResult.h\
	$(top_srcdir)/src/PhreeqcRM.h\
	$(top_srcdir)/src/RM_interface_C.h\
	$(top_srcdir)/src/RMVARS.h\
	$(top_srcdir)/src/VarManager.h\
	$(top_srcdir)/src/YAMLPhreeqcRM.h

FCDEFS=
if PHREEQCRM_TEST_FORTRAN
DEFS+=-DTEST_FORTRAN
FCDEFS+=-DTEST_FORTRAN
endif

# Docs
#
sourcedir=$(docdir)/src

dist_source_DATA=$(SRC)

SRC=\
	src/BMI_interface.F90\
	src/BMI_not_implemented.inc\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface.F90\
	src/RM_interface.F90\
	src/YAML_interface.F90


# We must override the default PPFCCOMPILE since ifort can't
# handle the FC_FUNC define correctly so $(DEFS) is replaced
# by $(FCDEFS)
#
if PHREEQCRM_WITH_YAMLCPP
FCDEFS+=-DUSE_YAML
endif
PPFCCOMPILE = $(FC) $(FCDEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
        $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FCFLAGS) $(FCFLAGS)
LTPPFCCOMPILE = $(LIBTOOL) $(AM_V_lt) --tag=FC $(AM_LIBTOOLFLAGS) \
        $(LIBTOOLFLAGS) --mode=compile $(FC) $(FCDEFS) \
        $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) \
        $(AM_FCFLAGS) $(FCFLAGS)

SUBDIRS = database doc Doxygen Tests
